[edit] Remove background pic

--- a/resources/public/css/resa_style.css
+++ b/resources/public/css/resa_style.css
@@ -38,5 +38,5 @@
 }
 
 #main-app-area {
- background: url("/resa/images/background.png");
+/*  background: url("/resa/images/background.png"); */
 }
