--- a/css/resa_style.css
+++ b/css/resa_style.css
@@ -9,9 +9,12 @@
 }
 .ant-input, .ant-time-picker-input {
   background-color: rgba(255, 255, 255, 0.1);
-  color: white;
+  color: black;
   border: solid 1px #979797;
   height: 4rem;
+}
+.hi-lib .ant-input, .hi-lib .ant-time-picker-input {
+  color: white;
 }
 .has-error .ant-input-group-addon {
   background-color: rgba(124, 124, 124, 0.5);
@@ -23,9 +26,6 @@
 .ant-input-group-addon {
   background-color: rgba(124, 124, 124, 0.5);
   border: solid 1px #979797;
-}
-.ant-input::placeholder {
-  color: #6b6b6b;
 }
 .ant-input:focus,
 .ant-input:hover {
